--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,10 @@
         <button class="search-button" type="submit">Search</button>
       </form>
 
-      <span class="loader is-hidden"></span>
-
       <ul class="gallery"></ul>
+
+      <button class="load-more is-hidden">Load more</button>
+      <span class="loader is-hidden"></span>
     </main>
 
     <script type="module" src="./main.js"></script>
