--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,10 @@
       </form>
 
       <ul class="gallery"></ul>
-
-      <button class="load-more is-hidden">Load more</button>
-      <span class="loader is-hidden"></span>
+      <div class="load-more-container is-hidden">
+        <button class="load-more">Load more</button>
+        <span class="loader is-hidden"></span>
+      </div>
     </main>
 
     <script type="module" src="./main.js"></script>
