--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
       </form>
 
       <ul class="gallery"></ul>
-      <div class="load-more-container is-hidden">
-        <button class="load-more">Load more</button>
+      <div class="load-more-container">
+        <button class="load-more is-hidden">Load more</button>
         <span class="loader is-hidden"></span>
       </div>
     </main>
